--- a/index.html
+++ b/index.html
@@ -9,17 +9,56 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
 </head>
 
-<body>
+<body class="dark-primary-color text-primary-color">
     <header></header>
     <div class="columns-container">
-        <aside class="side-column side-column-bg-color">
+        <aside class="
+        primary-text-color
+        light-primary-color
+        side-column side-column-bg-color">
             <h2>
                 Side menu
             </h2>
         </aside>
-        <main class="main-content main-content-bg-color">
+        <main class="main-column main-column-bg-color ">
             <section>
                 <h1>Main</h1>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text ever since
+                    the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+                    containing
+                    Lorem Ipsum passages, and more recently with desktop publishin
+                    g software like Aldus PageMaker including versions of Lore
+
+                </p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text ever since
+                    the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+                    containing
+                    Lorem Ipsum passages, and more recently with desktop publishin
+                    g software like Aldus PageMaker including versions of Lore
+
+                </p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text ever since
+                    the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+                    containing
+                    Lorem Ipsum passages, and more recently with desktop publishin
+                    g software like Aldus PageMaker including versions of Lore
+
+                </p>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting
                     industry. Lorem Ipsum has been the industry's standard dummy text ever since
