--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leslie's CV</title>
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="fontello/css/fontello.css">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400" rel="stylesheet">
 </head>
@@ -19,6 +20,14 @@
             <h2>
                 Side menu
             </h2>
+            <nav class="side-nav">
+                <a href="#"><i class="icon-linkedin-squared"></i>
+                    <span class="hide-on-xs">LinkedIn</span>
+                </a>
+                <a href="#"><i class="icon-github"></i>
+                    <span class="hide-on-xs">Github</span>
+                </a>
+            </nav>
         </aside>
         <main class="main-column main-column-bg-color ">
             <section>
